--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Server for Bus",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/DgurJIupyf/BusTimeTable#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
